fix horizontal scroll + others

--- a/frontend/src/themes/styles/components/ag-grid/header.css
+++ b/frontend/src/themes/styles/components/ag-grid/header.css
@@ -4,6 +4,10 @@
     justify-content: center;
   }
 
+  .ag-header-group-cell .ag-header-cell-resize::after {
+    display: none;
+  }
+
   .ag-header-cell.ag-text-left .ag-header-cell-label,
   .ag-header-group-cell.ag-text-left,
   .ag-header-cell.ag-text-left .ag-header-cell-comp-wrapper {
